# adventofcode2022

./: Cargo.toml
src/: main.rs
src/day1/: mod.rs
src/day2/: mod.rs
