[package]
name = "adventofcode2022"
description = "Advent of Code 2022"
version = "0.1.0"
edition = "2021"
authors = ["Mikael Sahlström <mick.sahlstrom@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }

